--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
       <artifactId>spring-context</artifactId>
       <version>5.3.5</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.3.6</version>
+      </dependency>
 
   </dependencies>
 
